--- a/assets/styles.css
+++ b/assets/styles.css
@@ -233,7 +233,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .slider-btn:hover {
-    background-color: #d1415e;
+    background-color:rgb(186, 140, 213);
 }
 
 .mobile-only {
